# me.appadeia.Victoria

./: CMakeLists.txt  main.cpp
data/: me.appadeia.Victoria.desktop
fonts/: fonts.qrc
i18n/: victoria_base.ts  victoria_de.ts
qml/: AddDrawer.qml  Homepage.qml  Service.qml  ServiceData.qml  Sidebar.qml  main.qml  qml.qrc
